# neat-xor

./: .gitignore  README.md  pyproject.toml
darcy_results/: darcy-champion.pkl  darcy-history.pkl
examples/: cli_editor.py  darcy_problem.py  darcy_run.py  darcy_train.py  parse_champion.py  parse_history.py  run_champion.py  train_xor.py  xor_problem.py
src/: neat_xor.py  neat_xor_go.py
src/neat_ml/: __init__.py  cli.py  genome.py  graph_utils.py  history.py  neat.py  persistence.py  problem.py  visualization.py
